--- a/index.html
+++ b/index.html
@@ -2,22 +2,30 @@
 <html>
   <head>
     <title>Socket.IO chat</title>
-    <style>
+    <link rel="stylesheet" type="text/css" href="css/chat-style.css">
+    <!-- <style>
       body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
 
-      #form { background: rgba(0, 0, 0, 0.15); padding: 0.25rem; position: fixed; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box; backdrop-filter: blur(10px); }
+      #chat-form { background: rgba(0, 0, 0, 0.15); padding: 0.25rem; position: fixed; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box; backdrop-filter: blur(10px); }
       #input { border: none; padding: 0 1rem; flex-grow: 1; border-radius: 2rem; margin: 0.25rem; }
       #input:focus { outline: none; }
-      #form > button { background: #333; border: none; padding: 0 1rem; margin: 0.25rem; border-radius: 3px; outline: none; color: #fff; }
+      #chat-form > button { background: #333; border: none; padding: 0 1rem; margin: 0.25rem; border-radius: 3px; outline: none; color: #fff; }
 
       #messages { list-style-type: none; margin: 0; padding: 0; }
       #messages > li { padding: 0.5rem 1rem; }
       #messages > li:nth-child(odd) { background: #efefef; }
-    </style>
+    </style> -->
   </head>
   <body>
+    <h3>Welcome!</h3>
+    <p>Glad you found this page!</p>
+
+    <p>Here is where i'd like to put my professional contact info, but if you found this website now you've come too soon!</p>
+
+    <p>Check back another time for some updates (maybe). In the meantime, enjoy chatting among anyone else who who happens to be waiting.</p>
+
     <ul id="messages"></ul>
-    <form id="form" action="">
+    <form id="chat-form" action="">
       <input id="input" autocomplete="off" /><button>Send</button>
     </form>
     <script src="/socket.io/socket.io.js"></script>
@@ -25,7 +33,7 @@
         var socket = io();
 
         var messages = document.getElementById('messages');
-        var form = document.getElementById('form');
+        var form = document.getElementById('chat-form');
         var input = document.getElementById('input');
 
         form.addEventListener('submit', (e) => {
